--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <section id="welcome-section">
   <h1>
-      Hi! I am Jishu Yadav.
+      Hi! I am JW.
       <br>I wish to become a Web Designer.
       <br>
       <br>
@@ -37,7 +37,7 @@
 </section>
 
 <section id ="profile-link"class="profile-link">
-    <a href="https://github.com/jishu-yadav"><br>>>>Github-profile-link</a>
+    <a href="https://github.com"><br>>>>Github-profile-link</a>
 </section>
 <style>
 @media screen(max-width: 600px) 
